--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -48,12 +48,13 @@ jobs:
         with:
           release: '15.2.Rel1' # <-- The compiler release to use
           
-      # - name: Configure CMake for F401
-      #   run: |
-      #     cmake --preset=stm32f401 -DTARGET_APP="" -DCMAKE_BUILD_TYPE="Debug"
 
-      # - name: Build for F401
-      #   run: cd build/stm32f401 && cmake --build .
+      - name: Configure CMake for F411
+        run: |
+          cmake --preset=stm32f411 -DTARGET_APP="" -DCMAKE_BUILD_TYPE="Debug"
+
+      - name: Build for F411
+        run: cd build/stm32f411 && cmake --build .
 
       # - name: Configure CMake for F746
       #   run: |
@@ -76,10 +77,10 @@ jobs:
       # - name: Build for L412
       #   run: cd build/stm32l412 && cmake --build .
 
-      - name: Configure CMake for L476
+      #- name: Configure CMake for L476
         run: |
           cmake --preset=stm32l476 -DTARGET_APP="" -DCMAKE_BUILD_TYPE="Debug"
-
+          
       - name: Build for L476
         run: cd build/stm32l476 && cmake --build .
 
