--- a/common/core/periph/chip_select/CMakeLists.txt
+++ b/common/core/periph/chip_select/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(chip_select INTERFACE
 
 target_include_directories(chip_select INTERFACE
     ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_SOURCE_DIR}/common/drivers/io
 )
 
 target_link_libraries(chip_select INTERFACE
