--- a/app/spi_test/CMakeLists.txt
+++ b/app/spi_test/CMakeLists.txt
@@ -6,7 +6,7 @@ set(PREPROCESS_DEFS
     -DDEF_FLASH_SIZE=1024K
 )
 
-add_subdirectory_for(STM32L476 BSP_L476)
+add_subdirectory_for(STM32F411 bsp_f411)
 
 if (TARGET spi_app_bsp)
 
@@ -17,7 +17,7 @@ if (TARGET spi_app_bsp)
 
     target_include_directories_for(${TARGET_DEVICE} ${EXECUTABLE}
         PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
-        PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/BSP_L476
+        PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/bsp_f411
     )
 
     target_link_libraries_for(${TARGET_DEVICE} ${EXECUTABLE} PRIVATE
