--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,4 +1,4 @@
-#add_subdirectory(spi_test)
+add_subdirectory(spi_test)
 add_subdirectory(blink)
 add_subdirectory(i2c_test)
 add_subdirectory(imu_test)
