--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(spi_test)
 add_subdirectory(blink)
 add_subdirectory(i2c_test)
 add_subdirectory(imu_test)
+add_subdirectory(w25q_test)
