--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(blink)
 add_subdirectory(i2c_test)
 add_subdirectory(imu_test)
 add_subdirectory(w25q_test)
+add_subdirectory(pwm_test)
