--- a/app/imu_test/bsp_f411/CMakeLists.txt
+++ b/app/imu_test/bsp_f411/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_library(bsp_f411 f411_board.cc)
+add_library(imu_bsp f411_board.cc)
 
-target_include_directories(bsp_f411
+target_include_directories(imu_bsp
     PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../bsp_f411
     PRIVATE ${CMAKE_SOURCE_DIR}/common/drivers/platform/bno055
 )
 
-target_link_libraries(bsp_f411 PUBLIC core bno055)
+target_link_libraries(imu_bsp PUBLIC core bno055)
