--- a/app/pwm_test/CMakeLists.txt
+++ b/app/pwm_test/CMakeLists.txt
@@ -9,7 +9,7 @@ set(PREPROCESS_DEFS
 # Only add BSP for this target device
 add_subdirectory_for(STM32F411 bsp_f411)
 
-if (TARGET bsp_f411)
+if (TARGET pwm_bsp)
 
 	add_executable_for(${TARGET_DEVICE} ${EXECUTABLE} ${LDF}
 		main.cc
@@ -18,10 +18,11 @@ if (TARGET bsp_f411)
 
 	target_include_directories_for(${TARGET_DEVICE} ${EXECUTABLE}
 		PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
+		PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/bsp_f411
 	)
 
 	target_link_libraries_for(${TARGET_DEVICE} ${EXECUTABLE} PRIVATE
-		bsp_f411
+		pwm_bsp
 	)
 
 	target_preprocess_for(${TARGET_DEVICE} ${EXECUTABLE} ${LINKER_SCRIPT} ${LDF} ${PREPROCESS_DEFS})
